.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

Plone 4.0 - UNRELEASED
----------------------

- Use the new `icon_expr` for specifying icons for content types instead.
  [hannosch]

- Prefer path expressions over Python expressions for persistent expressions.
  [hannosch]

- Use the new `kupu_enabled` browser view instead to determine Kupu
  availability. Change a Python expression to a path expression for the
  is_rtl check.
  [hannosch]

- Simplified the getIconFor method on the plone tool to only look at the
  action itself.
  [hannosch]

- Removed the dependency on plone.app.linkintegrity. The implementation does
  not work anymore in a WSGI environment.
  [hannosch]

- Removed accessibility_info page and corresponding JavaScript. The content
  of the page was applicable to Plone itself, but not the site driven by
  Plone. The content is better placed as a marketing text on plone.org.
  [hannosch]

- Removed site_actions action category. The corresponding viewlet uses simple
  static HTML now. You can add your own viewlet instead if you want to
  customize the default.
  [hannosch]

- Fixed the content_status_history form to include the required content table.
  The old_folder_contents template is gone.
  [hannosch]

- Fixed the browserDefault tests to use actual traversal to look up views
  for content items instead of relying on Acquisition.
  [hannosch]

- The remaining functionality from GroupUserFolder has been merged into
  the PlonePAS package. GroupUserFolder is no longer required.
  [hannosch]

- Removed the groups, groupdata, membership and memberdata tools from this
  package. All code is now in a central place inside PlonePAS. The persistent
  tools have been from the PlonePAS package since Plone 2.5.
  [hannosch]

- Fixed and cleaned up the personalize_form.
  [hannosch]
