@@ -8,7 +8,6 @@ from Products.CMFPlone import utils
 from Products.Five import BrowserView
 
 from Products.CMFPlone.browser.interfaces import INavigationBreadcrumbs
-from Products.CMFPlone.browser.interfaces import INavigationTabs
 from Products.CMFPlone.browser.interfaces import INavigationTree
 from Products.CMFPlone.browser.interfaces import ISiteMap
 from Products.CMFPlone.interfaces import IHideFromBreadcrumbs
@@ -109,113 +108,6 @@ class CatalogSiteMap(BrowserView):
         strategy = getMultiAdapter((context, self), INavtreeStrategy)
 
         return buildFolderTree(context, obj=context, query=query, strategy=strategy)
-
-
-class CatalogNavigationTabs(BrowserView):
-    implements(INavigationTabs)
-
-    def topLevelTabs(self, actions=None, category='portal_tabs'):
-        context = aq_inner(self.context)
-
-        portal_catalog = getToolByName(context, 'portal_catalog')
-        portal_properties = getToolByName(context, 'portal_properties')
-        navtree_properties = getattr(portal_properties, 'navtree_properties')
-        site_properties = getattr(portal_properties, 'site_properties')
-
-        if actions is None:
-            context_state = getMultiAdapter((context, self.request),
-                                            name=u'plone_context_state')
-            actions = context_state.actions(category)
-
-        # Build result dict
-        result = []
-        # first the actions
-        if actions is not None:
-            for actionInfo in actions:
-                data = actionInfo.copy()
-                data['name'] = data['title']
-                result.append(data)
-
-        # check whether we only want actions
-        if site_properties.getProperty('disable_folder_sections', False):
-            return result
-
-        customQuery = getattr(context, 'getCustomNavQuery', False)
-        if customQuery is not None and utils.safe_callable(customQuery):
-            query = customQuery()
-        else:
-            query = {}
-
-        rootPath = getNavigationRoot(context)
-        query['path'] = {'query' : rootPath, 'depth' : 1}
-
-        query['portal_type'] = utils.typesToList(context)
-
-        sortAttribute = navtree_properties.getProperty('sortAttribute', None)
-        if sortAttribute is not None:
-            query['sort_on'] = sortAttribute
-
-            sortOrder = navtree_properties.getProperty('sortOrder', None)
-            if sortOrder is not None:
-                query['sort_order'] = sortOrder
-
-        if navtree_properties.getProperty('enable_wf_state_filtering', False):
-            query['review_state'] = navtree_properties.getProperty('wf_states_to_show', [])
-
-        query['is_default_page'] = False
-        
-        if site_properties.getProperty('disable_nonfolderish_sections', False):
-            query['is_folderish'] = True
-
-        # Get ids not to list and make a dict to make the search fast
-        idsNotToList = navtree_properties.getProperty('idsNotToList', ())
-        excludedIds = {}
-        for id in idsNotToList:
-            excludedIds[id]=1
-
-        rawresult = portal_catalog.searchResults(**query)
-
-        # now add the content to results
-        for item in rawresult:
-            if not (item.getId in excludedIds or item.exclude_from_nav):
-                id, item_url = get_view_url(item)
-                data = {'name'      : utils.pretty_title_or_id(context, item),
-                        'id'         : item.getId,
-                        'url'        : item_url,
-                        'description': item.Description}
-                result.append(data)
-        return result
-
-    def selectedTabs(self, default_tab='index_html', tabs=[]):
-        context = aq_inner(self.context)
-
-        url_tool = getToolByName(context, 'portal_url')
-        plone_url = url_tool()
-        request = self.request
-        valid_actions = []
-
-        url = request['URL']
-        path = url[len(plone_url):]
-
-        for action in tabs:
-            if not action['url'].startswith(plone_url):
-                # In this case the action url is an external link. Then, we avoid 
-                # issues (bad portal_tab selection) continuing with next action.
-                continue
-            action_path = action['url'][len(plone_url):]
-            if not action_path.startswith('/'):
-                action_path = '/' + action_path
-            if path.startswith(action_path):
-                # Make a list of the action ids, along with the path length for
-                # choosing the longest (most relevant) path.
-                valid_actions.append((len(action_path), action['id']))
-
-        # Sort by path length, the longest matching path wins
-        valid_actions.sort()
-        if valid_actions:
-            return {'portal':valid_actions[-1][1]}
-
-        return {'portal':default_tab}
 
 
 class CatalogNavigationBreadcrumbs(BrowserView):
